avoid card overflow

--- a/railcard.css
+++ b/railcard.css
@@ -62,7 +62,7 @@
 }
 #railcard #railcard_detail_img {
     transition: transform 0.3s ease-in-out;
-    max-width: 100%;
+    max-width: 90%;
     border-radius: 30px;
     box-shadow: 0px 10px 20px 5px black; 
 }
